Test Sandbox Project/src/objects/QA_Question__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bobot_Desc__c</fullName>
        <formula>&quot;Bobot : FE &quot;&amp; TEXT( FLOOR(Bobot_FE__c * 100))&amp; &quot;% (&quot; &amp;
TEXT(IF(ISBLANK(S_FE_01__c), 0, 1)+
IF(ISBLANK(S_FE_02__c), 0, 1)+
IF(ISBLANK(S_FE_03__c), 0, 1)+
IF(ISBLANK(S_FE_04__c), 0, 1)+
IF(ISBLANK(S_FE_05__c), 0, 1)+
IF(ISBLANK(S_FE_06__c), 0, 1)+
IF(ISBLANK(S_FE_07__c), 0, 1)+
IF(ISBLANK(S_FE_08__c), 0, 1)+
IF(ISBLANK(S_FE_09__c), 0, 1)+
IF(ISBLANK(S_FE_10__c), 0, 1)
)&amp;&quot; attribute), NFE &quot;&amp; TEXT(FLOOR(Bobot_NFE__c*100)) &amp;&quot;% (&quot;&amp;

TEXT(
IF(ISBLANK(S_NFE_01__c), 0, 1)+
IF(ISBLANK(S_NFE_02__c), 0, 1)+
IF(ISBLANK(S_NFE_03__c), 0, 1)+
IF(ISBLANK(S_NFE_04__c), 0, 1)+
IF(ISBLANK(S_NFE_05__c), 0, 1)+
IF(ISBLANK(S_NFE_06__c), 0, 1)+
IF(ISBLANK(S_NFE_07__c), 0, 1)+
IF(ISBLANK(S_NFE_08__c), 0, 1)+
IF(ISBLANK(S_NFE_09__c), 0, 1)+
IF(ISBLANK(S_NFE_10__c), 0, 1)+
IF(ISBLANK(S_NFE_11__c), 0, 1)+
IF(ISBLANK(S_NFE_12__c), 0, 1)+
IF(ISBLANK(S_NFE_13__c), 0, 1)+
IF(ISBLANK(S_NFE_14__c), 0, 1)+
IF(ISBLANK(S_NFE_15__c), 0, 1)
) &amp; &quot; attribute)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bobot Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bobot_FE_01__c</fullName>
        <label>Bobot_FE_01</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_FE_02__c</fullName>
        <label>Bobot_FE_02</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_FE_03__c</fullName>
        <label>Bobot_FE_03</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_FE__c</fullName>
        <inlineHelpText>Fatal Error</inlineHelpText>
        <label>Bobot FE (%)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bobot_NFE_01__c</fullName>
        <label>Bobot_NFE_01</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_NFE_02__c</fullName>
        <label>Bobot_NFE_02</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_NFE_03__c</fullName>
        <label>Bobot_NFE_03</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_NFE__c</fullName>
        <inlineHelpText>Non Fatal Error</inlineHelpText>
        <label>Bobot NFE (%)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Create_QA_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create QA Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FE_Attribute__c</fullName>
        <formula>IF(ISBLANK(S_FE_01__c), 0, 1)+
IF(ISBLANK(S_FE_02__c), 0, 1)+
IF(ISBLANK(S_FE_03__c), 0, 1)+
IF(ISBLANK(S_FE_04__c), 0, 1)+
IF(ISBLANK(S_FE_05__c), 0, 1)+
IF(ISBLANK(S_FE_06__c), 0, 1)+
IF(ISBLANK(S_FE_07__c), 0, 1)+
IF(ISBLANK(S_FE_08__c), 0, 1)+
IF(ISBLANK(S_FE_09__c), 0, 1)+
IF(ISBLANK(S_FE_10__c), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FE Attribute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NFE_Attribute__c</fullName>
        <formula>IF(ISBLANK(S_NFE_01__c), 0, 1)+
IF(ISBLANK(S_NFE_02__c), 0, 1)+
IF(ISBLANK(S_NFE_03__c), 0, 1)+
IF(ISBLANK(S_NFE_04__c), 0, 1)+
IF(ISBLANK(S_NFE_05__c), 0, 1)+
IF(ISBLANK(S_NFE_06__c), 0, 1)+
IF(ISBLANK(S_NFE_07__c), 0, 1)+
IF(ISBLANK(S_NFE_08__c), 0, 1)+
IF(ISBLANK(S_NFE_09__c), 0, 1)+
IF(ISBLANK(S_NFE_10__c), 0, 1)+
IF(ISBLANK(S_NFE_11__c), 0, 1)+
IF(ISBLANK(S_NFE_12__c), 0, 1)+
IF(ISBLANK(S_NFE_13__c), 0, 1)+
IF(ISBLANK(S_NFE_14__c), 0, 1)+
IF(ISBLANK(S_NFE_15__c), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NFE Attribute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_FE_01__c</fullName>
        <label>Description_FE_01</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_FE_02__c</fullName>
        <label>Description_FE_02</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_FE_03__c</fullName>
        <label>Description_FE_03</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_NFE_01__c</fullName>
        <label>Description_NFE_01</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_NFE_02__c</fullName>
        <label>Description_NFE_02</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_NFE_03__c</fullName>
        <label>Description_NFE_03</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_FE_01__c</fullName>
        <label>Parameter_FE_01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_FE_02__c</fullName>
        <label>Parameter_FE_02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_FE_03__c</fullName>
        <label>Parameter_FE_03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_NFE_01__c</fullName>
        <label>Parameter_NFE_01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_NFE_02__c</fullName>
        <label>Parameter_NFE_02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_NFE_03__c</fullName>
        <label>Parameter_NFE_03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bobot_FE__c</fullName>
        <formula>IF(ISBLANK(S_FE_01__c), 0, Bobot_FE_01__c)+
IF(ISBLANK(S_FE_02__c), 0, Bobot_FE_02__c)+
IF(ISBLANK(S_FE_03__c), 0, Bobot_FE_03__c)+
IF(ISBLANK(S_FE_04__c), 0, Bobot_FE_04__c)+
IF(ISBLANK(S_FE_05__c), 0, Bobot_FE_05__c)+
IF(ISBLANK(S_FE_06__c), 0, Bobot_FE_06__c)+
IF(ISBLANK(S_FE_07__c), 0, Bobot_FE_07__c)+
IF(ISBLANK(S_FE_08__c), 0, Bobot_FE_08__c)+
IF(ISBLANK(S_FE_09__c), 0, Bobot_FE_09__c)+
IF(ISBLANK(S_FE_10__c), 0, Bobot_FE_10__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bobot FE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bobot_NFE__c</fullName>
        <formula>IF(ISBLANK(S_NFE_01__c), 0, Bobot_NFE_01__c)+
IF(ISBLANK(S_NFE_02__c), 0, Bobot_NFE_02__c)+
IF(ISBLANK(S_NFE_03__c), 0, Bobot_NFE_03__c)+
IF(ISBLANK(S_NFE_04__c), 0, Bobot_NFE_04__c)+
IF(ISBLANK(S_NFE_05__c), 0, Bobot_NFE_05__c)+
IF(ISBLANK(S_NFE_06__c), 0, Bobot_NFE_06__c)+
IF(ISBLANK(S_NFE_07__c), 0, Bobot_NFE_07__c)+
IF(ISBLANK(S_NFE_08__c), 0, Bobot_NFE_08__c)+
IF(ISBLANK(S_NFE_09__c), 0, Bobot_NFE_09__c)+
IF(ISBLANK(S_NFE_10__c), 0, Bobot_NFE_10__c)+
IF(ISBLANK(S_NFE_11__c), 0, Bobot_NFE_11__c)+
IF(ISBLANK(S_NFE_12__c), 0, Bobot_NFE_12__c)+
IF(ISBLANK(S_NFE_13__c), 0, Bobot_NFE_13__c)+
IF(ISBLANK(S_NFE_14__c), 0, Bobot_NFE_14__c)+
IF(ISBLANK(S_NFE_15__c), 0, Bobot_NFE_15__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bobot NFE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Agent__c</fullName>
        <label>Type Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Resolution Center</fullName>
                </value>
                <value>
                    <fullName>Master Outbound</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Master Outbound 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QA Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Bobot_FE__c</columns>
        <columns>Bobot_NFE__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Type_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QA-{000000000}</displayFormat>
        <label>Question No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Question</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Bobot_must_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(S_FE_01__c) &amp;&amp; (Bobot_FE_01__c &gt; 0) ) ||
( ISBLANK(S_FE_02__c) &amp;&amp; (Bobot_FE_02__c &gt; 0) ) ||
( ISBLANK(S_FE_03__c) &amp;&amp; (Bobot_FE_03__c &gt; 0) ) ||
( ISBLANK(S_FE_04__c) &amp;&amp; (Bobot_FE_04__c &gt; 0) ) ||
( ISBLANK(S_FE_05__c) &amp;&amp; (Bobot_FE_05__c &gt; 0) ) ||
( ISBLANK(S_FE_06__c) &amp;&amp; (Bobot_FE_06__c &gt; 0) ) ||
( ISBLANK(S_FE_07__c) &amp;&amp; (Bobot_FE_07__c &gt; 0) ) ||
( ISBLANK(S_FE_08__c) &amp;&amp; (Bobot_FE_08__c &gt; 0) ) ||
( ISBLANK(S_FE_09__c) &amp;&amp; (Bobot_FE_09__c &gt; 0) ) ||
( ISBLANK(S_FE_10__c) &amp;&amp; (Bobot_FE_10__c &gt; 0) ) ||

( ISBLANK(S_NFE_01__c) &amp;&amp; (Bobot_NFE_01__c &gt; 0) ) ||
( ISBLANK(S_NFE_02__c) &amp;&amp; (Bobot_NFE_02__c &gt; 0) ) ||
( ISBLANK(S_NFE_03__c) &amp;&amp; (Bobot_NFE_03__c &gt; 0) ) ||
( ISBLANK(S_NFE_04__c) &amp;&amp; (Bobot_NFE_04__c &gt; 0) ) ||
( ISBLANK(S_NFE_05__c) &amp;&amp; (Bobot_NFE_05__c &gt; 0) ) ||
( ISBLANK(S_NFE_06__c) &amp;&amp; (Bobot_NFE_06__c &gt; 0) ) ||
( ISBLANK(S_NFE_07__c) &amp;&amp; (Bobot_NFE_07__c &gt; 0) ) ||
( ISBLANK(S_NFE_08__c) &amp;&amp; (Bobot_NFE_08__c &gt; 0) ) ||
( ISBLANK(S_NFE_09__c) &amp;&amp; (Bobot_NFE_09__c &gt; 0) ) ||
( ISBLANK(S_NFE_10__c) &amp;&amp; (Bobot_NFE_10__c &gt; 0) ) ||
( ISBLANK(S_NFE_11__c) &amp;&amp; (Bobot_NFE_11__c &gt; 0) ) ||
( ISBLANK(S_NFE_12__c) &amp;&amp; (Bobot_NFE_12__c &gt; 0) ) ||
( ISBLANK(S_NFE_13__c) &amp;&amp; (Bobot_NFE_13__c &gt; 0) ) ||
( ISBLANK(S_NFE_14__c) &amp;&amp; (Bobot_NFE_14__c &gt; 0) ) ||
( ISBLANK(S_NFE_15__c) &amp;&amp; (Bobot_NFE_15__c &gt; 0) )</errorConditionFormula>
        <errorMessage>Bobot must Blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bobot_must_filled</fullName>
        <active>true</active>
        <errorConditionFormula>( !ISBLANK(S_FE_01__c) &amp;&amp; (ISBLANK(Bobot_FE_01__c) || Bobot_FE_01__c &lt; 1) ) ||
( !ISBLANK(S_FE_02__c) &amp;&amp; (ISBLANK(Bobot_FE_02__c) || Bobot_FE_02__c &lt; 1) ) ||
( !ISBLANK(S_FE_03__c) &amp;&amp; (ISBLANK(Bobot_FE_03__c) || Bobot_FE_03__c &lt; 1) ) ||
( !ISBLANK(S_FE_04__c) &amp;&amp; (ISBLANK(Bobot_FE_04__c) || Bobot_FE_04__c &lt; 1) ) ||
( !ISBLANK(S_FE_05__c) &amp;&amp; (ISBLANK(Bobot_FE_05__c) || Bobot_FE_05__c &lt; 1) ) ||
( !ISBLANK(S_FE_06__c) &amp;&amp; (ISBLANK(Bobot_FE_06__c) || Bobot_FE_06__c &lt; 1) ) ||
( !ISBLANK(S_FE_07__c) &amp;&amp; (ISBLANK(Bobot_FE_07__c) || Bobot_FE_07__c &lt; 1) ) ||
( !ISBLANK(S_FE_08__c) &amp;&amp; (ISBLANK(Bobot_FE_08__c) || Bobot_FE_08__c &lt; 1) ) ||
( !ISBLANK(S_FE_09__c) &amp;&amp; (ISBLANK(Bobot_FE_09__c) || Bobot_FE_09__c &lt; 1) ) ||
( !ISBLANK(S_FE_10__c) &amp;&amp; (ISBLANK(Bobot_FE_10__c) || Bobot_FE_10__c &lt; 1) ) ||

( !ISBLANK(S_NFE_01__c) &amp;&amp; (ISBLANK(Bobot_NFE_01__c) || Bobot_NFE_01__c &lt; 1) ) ||
( !ISBLANK(S_NFE_02__c) &amp;&amp; (ISBLANK(Bobot_NFE_02__c) || Bobot_NFE_02__c &lt; 1) ) ||
( !ISBLANK(S_NFE_03__c) &amp;&amp; (ISBLANK(Bobot_NFE_03__c) || Bobot_NFE_03__c &lt; 1) ) ||
( !ISBLANK(S_NFE_04__c) &amp;&amp; (ISBLANK(Bobot_NFE_04__c) || Bobot_NFE_04__c &lt; 1) ) ||
( !ISBLANK(S_NFE_05__c) &amp;&amp; (ISBLANK(Bobot_NFE_05__c) || Bobot_NFE_05__c &lt; 1) ) ||
( !ISBLANK(S_NFE_06__c) &amp;&amp; (ISBLANK(Bobot_NFE_06__c) || Bobot_NFE_06__c &lt; 1) ) ||
( !ISBLANK(S_NFE_07__c) &amp;&amp; (ISBLANK(Bobot_NFE_07__c) || Bobot_NFE_07__c &lt; 1) ) ||
( !ISBLANK(S_NFE_08__c) &amp;&amp; (ISBLANK(Bobot_NFE_08__c) || Bobot_NFE_08__c &lt; 1) ) ||
( !ISBLANK(S_NFE_09__c) &amp;&amp; (ISBLANK(Bobot_NFE_09__c) || Bobot_NFE_09__c &lt; 1) ) ||
( !ISBLANK(S_NFE_10__c) &amp;&amp; (ISBLANK(Bobot_NFE_10__c) || Bobot_NFE_10__c &lt; 1) ) ||
( !ISBLANK(S_NFE_11__c) &amp;&amp; (ISBLANK(Bobot_NFE_11__c) || Bobot_NFE_11__c &lt; 1) ) ||
( !ISBLANK(S_NFE_12__c) &amp;&amp; (ISBLANK(Bobot_NFE_12__c) || Bobot_NFE_12__c &lt; 1) ) ||
( !ISBLANK(S_NFE_13__c) &amp;&amp; (ISBLANK(Bobot_NFE_13__c) || Bobot_NFE_13__c &lt; 1) ) ||
( !ISBLANK(S_NFE_14__c) &amp;&amp; (ISBLANK(Bobot_NFE_14__c) || Bobot_NFE_14__c &lt; 1) ) ||
( !ISBLANK(S_NFE_15__c) &amp;&amp; (ISBLANK(Bobot_NFE_15__c) || Bobot_NFE_15__c &lt; 1) )</errorConditionFormula>
        <errorMessage>Bobot must Filled</errorMessage>
    </validationRules>
</CustomObject>